third_party/rust/paste/tests/ui/env-empty.rs
use paste::paste;

paste! {
    fn [<env!()>]() {}
}

fn main() {}
